corrigi o bug do menu mobile invisible, mas ocupando toda a página

--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ body{
     gap: 10px;
     background: black;
     z-index: 2;
-    transform: translateY(-0vh);
+    transform: translateY(-120vh);
     transition: .3s ease-in-out;
 }
 
